--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "simpl-schema": "^1.5.5",
+    "styled-components": "^4.4.1",
     "sweetalert": "^2.1.2",
     "uniforms": "^2.2.0",
     "uniforms-bridge-simple-schema-2": "^2.2.0",
